kubernetes/projects/apps/dennispham.me/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dennispham-me
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/den4200/portfolio_frontend
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 20m
            memory: 10Mi
          limits:
            cpu: 40m
            memory: 25Mi
        ports:
        - containerPort: 80
