kubernetes/projects/apps/dennispham.me/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dennispham-me
spec:
  selector:
    app: frontend
  ports:
  - port: 80
